--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
   </script>
 </head>
 <body>
-
+<audio controls >
+    <source src ="img/Talk-Khalid-5964486.mp3" type="audio/mpeg"/>
+  </audio>
   <div style="text-align: right;padding: 15px;"><a href="#" class="classname" onclick="toggleShape()">Đổi kiểu</a></div>
   
   <div id="container">
