--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta http-equiv="Pragma" content="no-cache" />
   <meta http-equiv="Expires" content="0" />
   -->
-   <title><b>Happy birthday Dung</b></title>
+   <title>Happy birthday Dung</title>
   <link rel="stylesheet" href="css/style.css" type="text/css" media="screen" />
 
   <script type="text/javascript" charset="utf-8">
@@ -62,6 +62,7 @@
   </script>
 </head>
 <body>
+   <center><b> CHÚC MỪNG SINH NHẬT DUNG ÂN </B></center> 
 <audio controls >
     <source src ="img/Talk-Khalid-5964486.mp3" type="audio/mpeg"/>
   </audio>
